--- a/about.css
+++ b/about.css
@@ -15,6 +15,8 @@
 	width: 100%;
 	height: 80px;
 	background-color: rgba(0,0,0,0.5);
+	/* this is comment 
+	*/
 }
 
 .leftmenu{
@@ -46,7 +48,8 @@
 
 .rightmenu ul{
 	margin-left: 150px;
-
+/*
+this is comment */
 }
 
 .rightmenu ul li {
